<?xml version="1.0"?>
<package format="3">
  <name>stereo_camera</name>
  <version>0.1.0</version>

  <description>
    ROS2 driver for a side-by-side USB stereo camera.
  </description>

  <maintainer email="openrobotplatform@example.com">
    OpenRobotPlatform
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
